added Angular Material to the Html

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,2 +1,70 @@
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Inicio</title>
+</head>
+<body>
+    <!--
+  <header style="background-color: blue;">
+    VALE CHUMBAR
+    <button>Iniciar sesión</button>
+    <button>Registrarse</button>
+  </header>  -->
+  <mat-form-field>
+  <mat-label>Provincias</mat-label>
+  <mat-select>
+      <mat-option value="Buenos Aires">Buenos Aires</mat-option>
+      <mat-option value="Santa Fe">Santa Fe</mat-option>
+      <mat-option value="Córdoba">Córdoba</mat-option>
+      <mat-option value="Entre Ríos">Entre Ríos</mat-option>
+      <mat-option value="Corrientes">Corrientes</mat-option>
+      <mat-option value="Misiones">Misiones</mat-option>
+  </mat-select>
+</mat-form-field>
+
+<mat-form-field>
+<mat-label>Ciudades</mat-label>
+  <mat-select>
+      <mat-option value="Buenos Aires">Buenos Aires</mat-option>
+      <mat-option value="San Nicolás">San Nicolás</mat-option>
+      <mat-option value="Pergamino">Pergamino</mat-option>
+      <mat-option value="Ramallo">Ramallo</mat-option>
+      <mat-option value="San Pedro">San Pedro</mat-option>
+      <mat-option value="Arrecifes">Arrecifes</mat-option>
+  </mat-select>
+</mat-form-field>
+
+<mat-card style="border: 1px solid;width: 300px;">
+    <mat-card-header><strong>Cancha</strong></mat-card-header>
+    <mat-card-content>Horarios: 9 a 13hs, 16 a 18hs, 21 a 00hs</mat-card-content>
+</mat-card>
+<mat-card style="border: 1px solid;width: 300px;">
+    <mat-card-header><strong>Cancha</strong></mat-card-header>
+    <mat-card-content>Horarios: 9 a 13hs, 16 a 18hs, 21 a 00hs</mat-card-content>
+</mat-card>
+<mat-card style="border: 1px solid;width: 300px;">
+    <mat-card-header><strong>Cancha</strong></mat-card-header>
+    <mat-card-content>Horarios: 9 a 13hs, 16 a 18hs, 21 a 00hs</mat-card-content>
+</mat-card>
+<mat-card style="border: 1px solid;width: 300px;">
+    <mat-card-header><strong>Cancha</strong></mat-card-header>
+    <mat-card-content>Horarios: 9 a 13hs, 16 a 18hs, 21 a 00hs</mat-card-content>
+</mat-card>
+<mat-card style="border: 1px solid;width: 300px;">
+    <mat-card-header><strong>Cancha</strong></mat-card-header>
+    <mat-card-content>Horarios: 9 a 13hs, 16 a 18hs, 21 a 00hs</mat-card-content>
+</mat-card>
+<mat-card style="border: 1px solid;width: 300px;">
+    <mat-card-header><strong>Cancha</strong></mat-card-header>
+    <mat-card-content>Horarios: 9 a 13hs, 16 a 18hs, 21 a 00hs</mat-card-content>
+</mat-card>
+
+<mat-toolbar  class="footer">
+    Este es el pie de pagina
+  </mat-toolbar>
+</body>
+</html>
