--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,60 +1,3 @@
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inicio</title>
-</head>
-
-<body>
-  <mat-form-field *ngIf="provinces!=null; else espera">
-    <mat-label>Provincias</mat-label>
-    <mat-select [(ngModel)]="provinceSeleccionado" (selectionChange)="actualizar()">
-      <mat-option *ngFor=" let province of provinces.data" value="{{province.id}}">{{province.name}}</mat-option>
-    </mat-select>
-  </mat-form-field>
-
-  <ng-template #espera>Cargando provincias...</ng-template>
-
-  <mat-form-field *ngIf="cities!=null; else espera2">
-    <mat-label>Ciudades</mat-label>
-    <mat-select>
-      <mat-option *ngFor=" let city of cities.data" value="{{city.id}}">{{city.name}}</mat-option>
-    </mat-select>
-  </mat-form-field>
-  <ng-template #espera2>Cargando ciudades...</ng-template>
-
-  <mat-card style="border: 1px solid;width: 300px;">
-    <mat-card-header><strong>Cancha</strong></mat-card-header>
-    <mat-card-content>Horarios: 9 a 13hs, 16 a 18hs, 21 a 00hs</mat-card-content>
-  </mat-card>
-  <mat-card style="border: 1px solid;width: 300px;">
-    <mat-card-header><strong>Cancha</strong></mat-card-header>
-    <mat-card-content>Horarios: 9 a 13hs, 16 a 18hs, 21 a 00hs</mat-card-content>
-  </mat-card>
-  <mat-card style="border: 1px solid;width: 300px;">
-    <mat-card-header><strong>Cancha</strong></mat-card-header>
-    <mat-card-content>Horarios: 9 a 13hs, 16 a 18hs, 21 a 00hs</mat-card-content>
-  </mat-card>
-  <mat-card style="border: 1px solid;width: 300px;">
-    <mat-card-header><strong>Cancha</strong></mat-card-header>
-    <mat-card-content>Horarios: 9 a 13hs, 16 a 18hs, 21 a 00hs</mat-card-content>
-  </mat-card>
-  <mat-card style="border: 1px solid;width: 300px;">
-    <mat-card-header><strong>Cancha</strong></mat-card-header>
-    <mat-card-content>Horarios: 9 a 13hs, 16 a 18hs, 21 a 00hs</mat-card-content>
-  </mat-card>
-  <mat-card style="border: 1px solid;width: 300px;">
-    <mat-card-header><strong>Cancha</strong></mat-card-header>
-    <mat-card-content>Horarios: 9 a 13hs, 16 a 18hs, 21 a 00hs</mat-card-content>
-  </mat-card>
-
-  <mat-toolbar class="footer">
-    Este es el pie de pagina
-  </mat-toolbar>
-</body>
-
-</html>
+<app-footer></app-footer>
