--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,23 +1,22 @@
 <div class="body">
-    <div class="login">
-        <mat-spinner *ngIf="loading" class="spinner" diameter="50"></mat-spinner>
+  <div class="login">
+    <mat-spinner *ngIf="loading" class="spinner" diameter="50"></mat-spinner>
 
-        <form *ngIf="!loading" [formGroup]="form" (ngSubmit)="ingresar()">
-            <img [src]="logo" alt="" width="50%" height="80%">
-            <h1 class="h3 mb-3 fw-normal">Iniciar sesión</h1>
-            <mat-form-field class="ancho" appearance="fill">
-            <mat-label>Usuario</mat-label>
-            <input type="text" matInput formControlName="usuario">
-          </mat-form-field>
-          <mat-form-field class="ancho" appearance="fill">
-            <mat-label>Contraseña</mat-label>
-            <input type="password" matInput autocomplete="off" formControlName="password">
-          </mat-form-field>
-          <br>
-          <button type="submit" (click)="ingresar()" class="ancho" mat-raised-button color="primary" [disabled]="form.invalid">Ingresar</button>
-        </form>
-        
-    </div>
+    <form *ngIf="!loading" [formGroup]="form" (ngSubmit)="ingresar()">
+      <img [src]="logo" alt="" width="50%" height="80%">
+      <h1 class="h3 mb-3 fw-normal">Iniciar sesión</h1>
+      <mat-form-field class="ancho" appearance="fill">
+        <mat-label>Usuario</mat-label>
+        <input type="text" matInput formControlName="usuario">
+      </mat-form-field>
+      <mat-form-field class="ancho" appearance="fill">
+        <mat-label>Contraseña</mat-label>
+        <input type="password" matInput autocomplete="off" formControlName="password">
+      </mat-form-field>
+      <br>
+      <button id="btn-confirmar" type="submit" (click)="ingresar()" class="ancho" mat-raised-button
+        color="primary">Ingresar</button>
+    </form>
+
+  </div>
 </div>
-
-
