--- a/src/app/components/dashboard/provincias/ver-provincia/ver-provincia.component.html
+++ b/src/app/components/dashboard/provincias/ver-provincia/ver-provincia.component.html
@@ -1,10 +1,8 @@
 <div class="container">
-    <mat-error>{{mensaje}}</mat-error>
+    <p><button style="margin-right: 25px;" mat-raised-button routerLink="/dashboard/provincias">Volver</button><br></p>
     <mat-toolbar style="margin-bottom: 25px;">
-        <span>Provincias</span>
+        <span>Provincia: {{nombre}}</span>
         <div class="example-spacer"></div>
-
-        <button mat-raised-button color="primary" routerLink="/dashboard/crear-provincia">AGREGAR</button>
     </mat-toolbar>
     <mat-form-field>
         <mat-label>Filtro</mat-label>
@@ -23,24 +21,6 @@
             <ng-container matColumnDef="name">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre </th>
                 <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="actions">
-                <th mat-header-cell *matHeaderCellDef> </th>
-                <td id="iconos" *matCellDef="let element">
-                    <a class="pointer" style="color: #1878b0;" matTooltip="Más información"
-                        routerLink="/dashboard/ver-provincia/{{element.id}}">
-                        <mat-icon>search</mat-icon>
-                    </a>
-                    <a class="pointer" style="color: #1f516f" matTooltip="Editar provincia"
-                        routerLink="/dashboard/actualizar-provincia/{{element.id}}">
-                        <mat-icon>edit</mat-icon>
-                    </a>
-                    <a class="pointer" style="color: rgb(209, 3, 3)" matTooltip="Eliminar provincia"
-                        (click)="eliminacion(element.id)">
-                        <mat-icon>delete</mat-icon>
-                    </a>
-                </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
