--- a/src/app/components/dashboard/usuarios/usuarios.component.html
+++ b/src/app/components/dashboard/usuarios/usuarios.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <p style="color: red;">{{mensaje}}</p>
     <mat-toolbar style="margin-bottom: 25px;">
         <span>Usuarios</span>
         <div class="example-spacer"></div>
@@ -6,7 +7,7 @@
         <button mat-raised-button color="primary" routerLink="/dashboard/crear-usuario">AGREGAR</button>
     </mat-toolbar>
 
-    <div *ngIf="listUsuarios.length > 0">
+  <!--  <div *ngIf="usuarios.length > 0"> -->
       <mat-form-field>
         <mat-label>Filtro</mat-label>
         <input matInput (keyup)="applyFilter($event)" placeholder="Usuario, Nombre, Apellido, DNI, Teléfono, Email o Rol" #input autocomplete="off">
@@ -16,6 +17,11 @@
         <table id="tabla" mat-table [dataSource]="dataSource" matSort>
        
           <!-- Position Column -->
+          <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
+            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+          </ng-container>
+
           <ng-container matColumnDef="username">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Usuario </th>
             <td mat-cell *matCellDef="let element"> {{element.username}} </td>
@@ -63,7 +69,7 @@
                   <a class="pointer" style="color: #1f516f" matTooltip="Editar usuario">
                       <mat-icon>edit</mat-icon>
                   </a>
-                  <a class="pointer" (click)="eliminarUsuario(i)" style="color: rgb(209, 3, 3)" matTooltip="Eliminar usuario">
+                  <a class="pointer" (click)="eliminarUsuario(element.id)" style="color: rgb(209, 3, 3)" matTooltip="Eliminar usuario">
                       <mat-icon>delete</mat-icon>
                   </a>
               </td>
@@ -75,8 +81,8 @@
   
         <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"  aria-label="Select page of users"></mat-paginator>
       </div>
-    </div>
+    <!-- </div>
 
-    <h2 *ngIf="listUsuarios.length == 0">No hay usuarios para mostrar</h2>
+    <h2 *ngIf="usuarios.length == 0">No hay usuarios para mostrar</h2>  -->
     
 </div>
