Aesthetic changes made

--- a/src/app/components/dashboard/ciudades/ver-ciudad/ver-ciudad.component.html
+++ b/src/app/components/dashboard/ciudades/ver-ciudad/ver-ciudad.component.html
@@ -7,11 +7,11 @@
     <mat-form-field>
         <mat-label>Nombre</mat-label>
         <input matInput readonly [ngModel]="nombre">
-    </mat-form-field>
+    </mat-form-field>&nbsp;
     <mat-form-field>
         <mat-label>Código postal</mat-label>
         <input matInput readonly [ngModel]="codigo_postal">
-    </mat-form-field>
+    </mat-form-field>&nbsp;
     <mat-form-field>
         <mat-label>Provincia</mat-label>
         <input matInput readonly [ngModel]="provincia.name">
