--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,3 +12,36 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .example-spacer {
     flex: 1 1 auto;
   }
+
+  .snackbar-succesfull{
+    color: green;
+    background-color: red;
+  }
+  .snackbar-warning{
+    color: yellow;
+  }
+  .snackbar-error{
+    color: red;
+  }
+  .mat-mdc-snack-bar-container {
+    &.blue-snackbar {
+      --mdc-snackbar-container-color: #2196f3;
+      --mat-mdc-snack-bar-button-color: #fff;
+      --mdc-snackbar-supporting-text-color: #fff;
+    }
+    &.red-snackbar {
+        --mdc-snackbar-container-color: red;
+        --mat-mdc-snack-bar-button-color: #fff;
+        --mdc-snackbar-supporting-text-color: #fff;
+    }
+    &.green-snackbar {
+        --mdc-snackbar-container-color: green;
+        --mat-mdc-snack-bar-button-color: #fff;
+        --mdc-snackbar-supporting-text-color: #fff;
+      }
+      &.yellow-snackbar {
+        --mdc-snackbar-container-color: yellow;
+        --mat-mdc-snack-bar-button-color: #fff;
+        --mdc-snackbar-supporting-text-color: #fff;
+      }
+  }
