--- a/src/app/components/dashboard/usuarios/crear-usuario/crear-usuario.component.html
+++ b/src/app/components/dashboard/usuarios/crear-usuario/crear-usuario.component.html
@@ -1,12 +1,12 @@
 <div class="container">
     <h2>Creación de usuario</h2>
-    <mat-error ngIf="error.length===0">{{error}}</mat-error>
+    <!--<mat-error ngIf="error.length===0">{{error}}</mat-error> -->
     <form>
         <mat-form-field>
             <mat-label>Nombre de Usuario</mat-label>
             <input matInput required [formControl]="nombreUsuario">
             <mat-error ngIf="nombreUsuario.length==0">{{getErrorMessage()}}</mat-error>
-        </mat-form-field><br>
+        </mat-form-field>
         <mat-form-field  appearance="fill">
             <mat-label>Contraseña</mat-label>
             <input type="password" matInput autocomplete="off" required [formControl]="contrasena">
@@ -17,12 +17,12 @@
             <mat-label>Nombre</mat-label>
             <input matInput required [formControl]="nombre">
             <mat-error ngIf="nombre.length==0">{{getErrorMessage()}}</mat-error>
-        </mat-form-field><br>
+        </mat-form-field>
         <mat-form-field>
             <mat-label>Apellido</mat-label>
             <input matInput required [formControl]="apellido">
             <mat-error ngIf="apellido.length==0">{{getErrorMessage()}}</mat-error>
-        </mat-form-field><br>
+        </mat-form-field>
         <mat-form-field>
             <mat-label>DNI</mat-label>
             <input matInput required [formControl]="dni">
@@ -32,18 +32,23 @@
             <mat-label>Teléfono</mat-label>
             <input matInput required [formControl]="telefono">
             <mat-error ngIf="telefono.length==0">{{getErrorMessage()}}</mat-error>
-        </mat-form-field><br>
+        </mat-form-field>
         <mat-form-field>
             <mat-label>Email</mat-label>
             <input matInput required [formControl]="email">
             <mat-error ngIf="email.length==0">{{getErrorMessage()}}</mat-error>
         </mat-form-field><br>
+
         <mat-form-field>
-            <mat-label>Rol</mat-label>
-            <input matInput required [formControl]="rol">
+        <mat-label>Rol</mat-label>
+            <mat-select required [formControl]="rol">
+              <mat-option value="Administrador">Administrador</mat-option>
+              <mat-option value="Operador">Operador</mat-option>
+              <mat-option value="Cliente">Cliente</mat-option>
+            </mat-select>
             <mat-error ngIf="rol.length==0">{{getErrorMessage()}}</mat-error>
         </mat-form-field><br>
-        
+
         <button style="margin-right: 25px;" mat-raised-button routerLink="/dashboard/usuarios">Cancelar</button>
         <button type="submit" mat-raised-button color="primary" (click)="crear()">Confirmar</button>
     </form>
