actualizar-usuario added

--- a/src/app/components/dashboard/usuarios/usuarios.component.html
+++ b/src/app/components/dashboard/usuarios/usuarios.component.html
@@ -66,7 +66,8 @@
                   <a class="pointer" style="color: #1878b0;" matTooltip="Más información">
                       <mat-icon>search</mat-icon>
                   </a>
-                  <a class="pointer" style="color: #1f516f" matTooltip="Editar usuario">
+                  <a class="pointer" style="color: #1f516f" matTooltip="Editar usuario"
+                      routerLink="/dashboard/actualizar-usuario/{{element.id}}">
                       <mat-icon>edit</mat-icon>
                   </a>
                   <a class="pointer" (click)="eliminarUsuario(element.id)" style="color: rgb(209, 3, 3)" matTooltip="Eliminar usuario">
