--- a/src/app/components/dashboard/usuarios/usuarios.component.html
+++ b/src/app/components/dashboard/usuarios/usuarios.component.html
@@ -63,7 +63,8 @@
           <ng-container matColumnDef="actions">
               <th mat-header-cell *matHeaderCellDef> </th>
               <td id="iconos" *matCellDef="let element; let i = index"> 
-                  <a class="pointer" style="color: #1878b0;" matTooltip="Más información">
+                  <a class="pointer" style="color: #1878b0;" matTooltip="Más información"
+                    routerLink="/dashboard/ver-usuario/{{element.id}}">
                       <mat-icon>search</mat-icon>
                   </a>
                   <a class="pointer" style="color: #1f516f" matTooltip="Editar usuario"
