--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,7 @@
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<div id="content-wrapper">
+    <app-navbar></app-navbar>
+    <div id="content">
+        <router-outlet></router-outlet>
+    </div>
 <app-footer></app-footer>
+</div>
