--- a/src/app/components/dashboard/footer/footer.component.html
+++ b/src/app/components/dashboard/footer/footer.component.html
@@ -1,3 +1,3 @@
 <mat-toolbar class="footer">
-    Este es el pie de pagina
+    <small>&copy; 2023 <b>FULBITO</b> - Todos los Derechos Reservados.</small>
 </mat-toolbar>
