--- a/src/app/components/dashboard/footer/footer.component.scss
+++ b/src/app/components/dashboard/footer/footer.component.scss
@@ -1,7 +1,9 @@
 .footer {
-    position: fixed;
+    //position: fixed;
     bottom: 0;
     width: 100%;
     background-color: rgba(4, 4, 107, 0.925);
     color: white;
+    flex-shrink: 0;
+    margin-top: 25px;
   }
