--- a/src/app/components/dashboard/usuarios/ver-usuario/ver-usuario.component.html
+++ b/src/app/components/dashboard/usuarios/ver-usuario/ver-usuario.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <p><button style="margin-right: 25px;" mat-raised-button routerLink="/dashboard/usuarios">Volver</button><br></p>
-    <mat-toolbar style="margin-bottom: 25px;">
+    <mat-toolbar class="mat-elevation-z12" style="margin-bottom: 25px;">
         <span>Usuario:</span>
         <div class="example-spacer"></div>
     </mat-toolbar>
