--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -6,4 +6,8 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    background-image: url('https://img.freepik.com/vector-premium/fondo-futbol-o-futbol-pelota-grande-colores-grises_444390-16659.jpg');
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; 
   }
