--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,3 +45,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
         --mdc-snackbar-supporting-text-color: #fff;
       }
   }
+
+  .sombra {
+    box-shadow: 5 5px 8px rgba(0, 0, 0, 0.1); /* Ajusta los valores según tus preferencias */
+    transition: box-shadow 0.3s ease; /* Agrega una transición suave para la sombra */
+}
