--- a/src/app/components/dashboard/provincias/crear-provincia/crear-provincia.component.html
+++ b/src/app/components/dashboard/provincias/crear-provincia/crear-provincia.component.html
@@ -3,7 +3,7 @@
     <form>
         <mat-form-field>
             <mat-label>Nombre</mat-label>
-            <input matInput required [formControl]="nombre">
+            <input matInput required [formControl]="nombre" maxlength="30">
             <mat-error ngIf="nombre.length==0">{{getErrorMessage()}}</mat-error>
         </mat-form-field><br>
         <button style="margin-right: 25px;" mat-raised-button routerLink="/dashboard/provincias">Cancelar</button>
